// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AcceptedModal should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-is-active el-modal-bg"
      />
      <div
        aria-describedby=":r0:"
        aria-modal="true"
        class="el-is-active el-modal"
        role="dialog"
      >
        <div
          class="mocked-styled-50 el-modal-header"
        >
          Reapit Foundations Invitation
        </div>
        <div
          class="mocked-styled-51 el-modal-body"
          id=":r0:"
        >
          <p
            class="el-text-base el-body-text"
          >
            You have been invited to join the '
            ' organisation on Reapit Foundations.
          </p>
          <p
            class="el-text-base el-body-text"
          >
            Before confirming your account, please ensure your details are correct below.
          </p>
          <p
            class="el-text-base el-body-text"
          >
            <strong>
              Important: 
            </strong>
            If you already have an account and confirm this invitation, any data on your existing account will no longer be available.
          </p>
          <form>
            <div
              class="el-form-layout-has-margin el-form-layout"
            >
              <div
                class="mocked-styled-133 el-input-wrap"
              >
                <div
                  class="mocked-styled-40 el-input-group"
                >
                  <input
                    aria-label="Input type undefined"
                    class="mocked-styled-38 el-input"
                    id="test-static-id"
                    name="name"
                  />
                  <label
                    class="mocked-styled-41 el-label"
                    for="test-static-id"
                  >
                    Name
                  </label>
                </div>
              </div>
              <div
                class="mocked-styled-133 el-input-wrap"
              >
                <div
                  class="mocked-styled-40 el-input-group"
                >
                  <input
                    aria-label="Input type undefined"
                    class="mocked-styled-38 el-input"
                    id="test-static-id"
                    name="jobTitle"
                  />
                  <label
                    class="mocked-styled-41 el-label"
                    for="test-static-id"
                  >
                    Job Title
                  </label>
                </div>
              </div>
            </div>
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="el-button-group-align-right el-button-group-inner"
              >
                <button
                  class="el-intent-danger el-button"
                  type="button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Decline
                </button>
                <button
                  class="el-intent-primary el-button"
                  type="submit"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Confirm
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-is-active el-modal-bg"
    />
    <div
      aria-describedby=":r0:"
      aria-modal="true"
      class="el-is-active el-modal"
      role="dialog"
    >
      <div
        class="mocked-styled-50 el-modal-header"
      >
        Reapit Foundations Invitation
      </div>
      <div
        class="mocked-styled-51 el-modal-body"
        id=":r0:"
      >
        <p
          class="el-text-base el-body-text"
        >
          You have been invited to join the '
          ' organisation on Reapit Foundations.
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Before confirming your account, please ensure your details are correct below.
        </p>
        <p
          class="el-text-base el-body-text"
        >
          <strong>
            Important: 
          </strong>
          If you already have an account and confirm this invitation, any data on your existing account will no longer be available.
        </p>
        <form>
          <div
            class="el-form-layout-has-margin el-form-layout"
          >
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                class="mocked-styled-40 el-input-group"
              >
                <input
                  aria-label="Input type undefined"
                  class="mocked-styled-38 el-input"
                  id="test-static-id"
                  name="name"
                />
                <label
                  class="mocked-styled-41 el-label"
                  for="test-static-id"
                >
                  Name
                </label>
              </div>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                class="mocked-styled-40 el-input-group"
              >
                <input
                  aria-label="Input type undefined"
                  class="mocked-styled-38 el-input"
                  id="test-static-id"
                  name="jobTitle"
                />
                <label
                  class="mocked-styled-41 el-label"
                  for="test-static-id"
                >
                  Job Title
                </label>
              </div>
            </div>
          </div>
          <div
            class="mocked-styled-2 el-button-group"
          >
            <div
              class="el-button-group-align-right el-button-group-inner"
            >
              <button
                class="el-intent-danger el-button"
                type="button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Decline
              </button>
              <button
                class="el-intent-primary el-button"
                type="submit"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Confirm
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AcceptedModal should match snapshot when an invite is accepted or rejected 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-is-active el-modal-bg"
      />
      <div
        aria-describedby=":r1:"
        aria-modal="true"
        class="el-is-active el-modal"
        role="dialog"
      >
        <div
          class="mocked-styled-50 el-modal-header"
        >
          Reapit Foundations Invitation
        </div>
        <div
          class="mocked-styled-51 el-modal-body"
          id=":r1:"
        >
          <p
            class="el-text-base el-body-text"
          >
            You have been invited to join the '
            ' organisation on Reapit Foundations.
          </p>
          <p
            class="el-text-base el-body-text"
          >
            Before confirming your account, please ensure your details are correct below.
          </p>
          <p
            class="el-text-base el-body-text"
          >
            <strong>
              Important: 
            </strong>
            If you already have an account and confirm this invitation, any data on your existing account will no longer be available.
          </p>
          <form>
            <div
              class="el-form-layout-has-margin el-form-layout"
            >
              <div
                class="mocked-styled-133 el-input-wrap"
              >
                <div
                  class="mocked-styled-40 el-input-group"
                >
                  <input
                    aria-label="Input type undefined"
                    class="mocked-styled-38 el-input"
                    id="test-static-id"
                    name="name"
                  />
                  <label
                    class="mocked-styled-41 el-label"
                    for="test-static-id"
                  >
                    Name
                  </label>
                </div>
              </div>
              <div
                class="mocked-styled-133 el-input-wrap"
              >
                <div
                  class="mocked-styled-40 el-input-group"
                >
                  <input
                    aria-label="Input type undefined"
                    class="mocked-styled-38 el-input"
                    id="test-static-id"
                    name="jobTitle"
                  />
                  <label
                    class="mocked-styled-41 el-label"
                    for="test-static-id"
                  >
                    Job Title
                  </label>
                </div>
              </div>
            </div>
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="el-button-group-align-right el-button-group-inner"
              >
                <button
                  class="el-intent-danger el-button"
                  type="button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Decline
                </button>
                <button
                  class="el-intent-primary el-button"
                  type="submit"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Confirm
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-is-active el-modal-bg"
    />
    <div
      aria-describedby=":r1:"
      aria-modal="true"
      class="el-is-active el-modal"
      role="dialog"
    >
      <div
        class="mocked-styled-50 el-modal-header"
      >
        Reapit Foundations Invitation
      </div>
      <div
        class="mocked-styled-51 el-modal-body"
        id=":r1:"
      >
        <p
          class="el-text-base el-body-text"
        >
          You have been invited to join the '
          ' organisation on Reapit Foundations.
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Before confirming your account, please ensure your details are correct below.
        </p>
        <p
          class="el-text-base el-body-text"
        >
          <strong>
            Important: 
          </strong>
          If you already have an account and confirm this invitation, any data on your existing account will no longer be available.
        </p>
        <form>
          <div
            class="el-form-layout-has-margin el-form-layout"
          >
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                class="mocked-styled-40 el-input-group"
              >
                <input
                  aria-label="Input type undefined"
                  class="mocked-styled-38 el-input"
                  id="test-static-id"
                  name="name"
                />
                <label
                  class="mocked-styled-41 el-label"
                  for="test-static-id"
                >
                  Name
                </label>
              </div>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                class="mocked-styled-40 el-input-group"
              >
                <input
                  aria-label="Input type undefined"
                  class="mocked-styled-38 el-input"
                  id="test-static-id"
                  name="jobTitle"
                />
                <label
                  class="mocked-styled-41 el-label"
                  for="test-static-id"
                >
                  Job Title
                </label>
              </div>
            </div>
          </div>
          <div
            class="mocked-styled-2 el-button-group"
          >
            <div
              class="el-button-group-align-right el-button-group-inner"
            >
              <button
                class="el-intent-danger el-button"
                type="button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Decline
              </button>
              <button
                class="el-intent-primary el-button"
                type="submit"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Confirm
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
